src/test/deca/context/valid/Objet/extends_object.deca
// Description:
//    test d'hériter de la classe Objet
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A extends Object {

}

{
    
}